--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,11 @@
-ENV=DEV
-SERVER_PORT=
+NODE_ENV='development'
+PORT=8945
 
-MONGO_LOCAL_HOSTNAME=
-MONGO_LOCAL_PORT=
 MONGO_LOCAL_DB=
+MONGO_LOCAL_DB_NAME=
 
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_CLUSTER=
 MONGO_DB=
+MONGO_DB_NAME=
 
-MONGO_TEST_HOSTNAME=
-MONGO_TEST_PORT=
 MONGO_TEST_DB=
+MONGO_TEST_DB_NAME=
