--- a/package.json
+++ b/package.json
@@ -2,20 +2,39 @@
   "name": "express_typescript_boilerplate",
   "version": "1.0.0",
   "description": "a boilerplate for express js with ts",
-  "main": "dist/server.js",
-  "repository": "repo",
+  "repository": {
+    "type": "git",
+    "url": "git+github.com:roqeebYusuff/express_typescript_boilerplate.git"
+  },
   "author": "Roqeeb Yusuff",
   "license": "ISC",
+  "scripts": {
+    "start": "node dist/server",
+    "dev": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/server.ts",
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "test": "npx mocha --reporter spec -r ts-node/register -r tsconfig-paths/register src/tests/*.test.ts"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/mocha": "^10.0.1",
+    "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.6",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   }
 }
